examples/test/testpolicy8363.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8363
  namespace: namespace471
spec:
  podSelector:
    matchLabels:
      key29: value28
      key40: value17
      key46: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value20
          key40: value37
          key31: value45
